# dcdfort

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  main.f90  meson.build
.github/: ISSUE_TEMPLATE.md
cmake/: buildtype.cmake  dcdfort.pc.cmake.in  info.cmake  libdcdfort.pc.cmake.in  public.cmake  version.cmake
cmake/pkg/: dcdfort-config.cmake.in
docs/: Doxyfile  conf.py  index.rst
docs/_build/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree
docs/html/: README_8md.html  annotated.html  annotated_dup.js  classes.html  common_8f90.html  conf_8py.html  dcdfile_8f90.html  dcdfort__tests_8f90.html  dcdreader_8f90.html  dcdreader_8f90.js  dcdwriter_2main_8f90.html  dcdwriter_8f90.html  dcdwriter_8f90.js  dir_3217c20c2d609c9e5fda84f4bbe97ec1.html  dir_3466b1e592c242f0c058e3632c318d87.html  dir_3466b1e592c242f0c058e3632c318d87.js  dir_43e0a1f539e00dcfa1a6bc4d4fee4fc2.html  dir_43e0a1f539e00dcfa1a6bc4d4fee4fc2.js  dir_46cd9cdfdab888f071ba221da5ae8752.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_512e83183c54f982187ce78135c4850c.html  dir_512e83183c54f982187ce78135c4850c.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_74280446b270eeb0e1338b785807492d.html  dir_93598ca166e67dcc8cf3dfff647b911b.html  dir_99fa7c61ba4e0d302aefc2e3391bcece.html  dir_99fa7c61ba4e0d302aefc2e3391bcece.js  dir_bcd1006d65a7db246525d51326d8896a.html  dir_cd9cc08906fc40ee05ef51feebed7711.html  dir_cfafba98a580ce4b62f8a6fa96d7cbb0.html  dir_d93a1d4020dea85bb71b237545b5e722.html  dir_db09e169eae3368b53f5912e17c0658c.html  dir_db09e169eae3368b53f5912e17c0658c.js  dir_ece12bb0087224e08cc900cb2d122da0.html  dir_ff5b43f4e1c80ab2675dc868fbb90a49.html  dir_ff5b43f4e1c80ab2675dc868fbb90a49.js  example_2main_8f90.html  files.html  functions.html  functions_func.html  (+53 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_2.js  classes_3.js  files_0.js  files_1.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  (+22 more)
example/: Makefile  main.f90
include/: dcdplugin.h
meson/: copy_test_files.sh  install_modules.sh
src/: CMakeLists.txt  common.f90  dcdfort_utils.mod  dcdplugin.c  dcdreader.f90  dcdwriter.f90  indexfile.f90  trajectory.f90  utils.f90
src/tests/: CMakeLists.txt  dcdfile.f90  dcdfort_tests.f90  ndxfile.f90  ndxfile_grp.f90  read_next.f90  speed.f90  test.dcd  test.ndx  test2.ndx  test3.dcd  test3.ndx  utils.f90
